# ajentify-testing

./: .env.example  .gitignore  README.md  pyproject.toml  run_tests.py
.github/workflows/: publish.yml
ajentify_testing/: __init__.py  cli.py  client.py  conversation.py  exceptions.py  models.py  params.py  prompts.py  runner.py  session.py  sim_agent.py  target_context.py
tests/: test_example.py
